HTML added for mailchimp service

--- a/index.html
+++ b/index.html
@@ -84,10 +84,20 @@
                 </div>
 
             <!-- MailChimp section -->
-            <div class="section section-basic">
+            <div class="section section-basic" style="background-color: #ECF0F1;">
                 <div class="container text-center mt-5">
-                    <h3 class="title">Here comes mailchimp</h3>
-        
+                    <img class="n-logo" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png" alt="" width="50px" height="50px">
+                    <h1>Stay with us, we are launching soon...</h1>
+                    <p>Hercules is working hard to launch the final release version of our app. Subscribe to us by clicked the subscribe button below and we'll notify you when we go online!</p>
+
+
+
+                    <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
+                            <div>
+                                <input class="btn btn-danger btn-lg btn-round" type="submit" value="Subscribe">
+                            </div>
+                        </div>
+                    </form>
                 </div>
             </div>
             <!-- End MailChimp section -->
