pricing tables added

--- a/index.html
+++ b/index.html
@@ -73,35 +73,100 @@
         </div>
         <!-- End Page header -->
 
-
         <div class="main">
-
-                <div class="section section-basic">
-                    <div class="container text-center mt-5">
-                        <h3 class="title">Some content here...</h3>
-                
-                    </div>
-                </div>
-
-            <!-- MailChimp section -->
-            <div class="section section-basic" style="background-color: #ECF0F1;">
+            <div class="section section-basic">
                 <div class="container text-center mt-5">
-                    <img class="n-logo" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png" alt="" width="50px" height="50px">
-                    <h1>Stay with us, we are launching soon...</h1>
-                    <p>Hercules is working hard to launch the final release version of our app. Subscribe to us by clicked the subscribe button below and we'll notify you when we go online!</p>
+                    <h3 class="title">Some content here...</h3>
+            
+                </div>
+            </div>
 
 
+            <!-- Pre-order section -->
+            <div class="section section-basic" id="pre-order-section">
+                <div class="container text-center mt-5">
+                    <h1 class="py-5">Pre-order our product!</h1>
+                    <section class="pricing py-4">
+                        <div class="container">
+                          <div class="row">
 
-                    <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
-                            <div>
-                                <input class="btn btn-danger btn-lg btn-round" type="submit" value="Subscribe">
+                            <!-- Standard -->
+                            <div class="col-lg-4">
+                              <div class="card mb-5 mb-lg-0">
+                                <div class="card-body">
+                                  <h5 class="card-title text-center">Standard</h5>
+                                  <h6 class="card-price text-center">$0</h6>
+                                  <hr>
+                                  <ul class="fa-ul py-2">
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Free calorie tracker</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Pro workout plans</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Pro calorie tracker</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>24/7 Premium support</li>
+                                        <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Hercules co-founder pack</li>
+                                      </ul>
+                                  <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                </div>
+                              </div>
+                            </div>
+
+                            <!-- Co-Founder -->
+                            <div class="col-lg-4">
+                              <div class="card mb-5 mb-lg-0" id="co-founder-pack">
+                                <div class="card-body">
+                                    <h5 class="card-title text-center">Co-Founder</h5>
+                                    <h6 class="card-price text-center">$9</h6>
+                                    <hr>
+                                    <ul class="fa-ul py-2">
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Free calorie tracker</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Pro workout plans</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Pro calorie tracker</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 Premium support</li>
+                                        <li><span class="fa-li"><i class="fas fa-check"></i></span>Hercules co-founder pack</li>
+                                    </ul>
+                                  <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                </div>
+                              </div>
+                            </div>
+
+
+                            <!-- Premium -->
+                            <div class="col-lg-4">
+                                <div class="card card mb-5 mb-lg-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title text-center">Premium</h5>
+                                        <h6 class="card-price text-center">$49</h6>
+                                        <hr>
+                                        <ul class="fa-ul py-2">
+                                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
+                                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Free calorie tracker</li>
+                                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Pro workout plans</li>
+                                            <li><span class="fa-li"><i class="fas fa-check"></i></span>Pro calorie tracker</li>
+                                            <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>24/7 Premium support</li>
+                                            <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Hercules co-founder pack</li>
+                                        </ul>
+                                        <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
+                    </section>
+                </div>
+            </div>
+
+            <!-- MailChimp section -->
+            <div class="section section-basic" id="mailchimp-section">
+                <div class="container text-center">
+                    <img class="n-logo mt-5" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png">
+                    <h1>Stay with us, we are launching soon...</h1>
+                    <p>Hercules is working hard to launch the final release version of our app. Subscribe to us by clicked the subscribe button below and we'll notify you when we go online!</p>
+                    <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
+                            <input class="btn btn-danger btn-lg" type="submit" value="Subscribe">
                     </form>
                 </div>
             </div>
             <!-- End MailChimp section -->
-
 
         <!-- Footer -->
         <footer class="footer" data-background-color="black">
