paralax scrolling on pricing section

--- a/index.html
+++ b/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-  <meta name="viewport" content="width=device-width" />
-  <title>Hercules - Become your own personal trainer</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+    <title>Hercules - Become your own personal trainer</title>
 
-  <!-- Fonts and icons -->
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
-  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+    <!-- Fonts and icons -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
-  <!-- Bootstrap core CSS     -->
-  <link rel="stylesheet" href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/css/bootstrap.min.css">
-  <link href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/css/now-ui-kit.min.css?v1.2.0" rel="stylesheet"/>
-  <link href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/demo/demo.css" rel="stylesheet">
+    <!-- Bootstrap core CSS     -->
+    <link rel="stylesheet" href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/css/bootstrap.min.css">
+    <link href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/css/now-ui-kit.min.css?v1.2.0" rel="stylesheet"
+    />
+    <link href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/demo/demo.css" rel="stylesheet">
 
-  <!-- Personal CSS styling -->
-  <link rel="stylesheet" href="style.css">
+    <!-- Personal CSS styling -->
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Parallax.js -->
 </head>
 
 <body class="index-page sidebar-collapse">
@@ -80,13 +83,12 @@
             
                 </div>
             </div>
-
-
-            <!-- Pre-order section -->
+           <!-- Pre-order section -->
             <div class="section section-basic" id="pre-order-section">
                 <div class="container text-center mt-5">
                     <h1 class="py-5">Pre-order our product!</h1>
-                    <section class="pricing py-4">
+                    
+                    <section class="pricing ">
                         <div class="container">
                           <div class="row">
 
@@ -94,8 +96,8 @@
                             <div class="col-lg-4">
                               <div class="card mb-5 mb-lg-0">
                                 <div class="card-body">
-                                  <h5 class="card-title text-center">Standard</h5>
-                                  <h6 class="card-price text-center">$0</h6>
+                                  <h5 class="card-title">Standard</h5>
+                                  <h6 class="card-price">$0</h6>
                                   <hr>
                                   <ul class="fa-ul py-2">
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
@@ -105,7 +107,7 @@
                                         <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>24/7 Premium support</li>
                                         <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Hercules co-founder pack</li>
                                       </ul>
-                                  <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                  <a class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
                                 </div>
                               </div>
                             </div>
@@ -114,8 +116,8 @@
                             <div class="col-lg-4">
                               <div class="card mb-5 mb-lg-0" id="co-founder-pack">
                                 <div class="card-body">
-                                    <h5 class="card-title text-center">Co-Founder</h5>
-                                    <h6 class="card-price text-center">$9</h6>
+                                    <h5 class="card-title">Co-Founder</h5>
+                                    <h6 class="card-price">$9</h6>
                                     <hr>
                                     <ul class="fa-ul py-2">
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
@@ -125,7 +127,7 @@
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>24/7 Premium support</li>
                                         <li><span class="fa-li"><i class="fas fa-check"></i></span>Hercules co-founder pack</li>
                                     </ul>
-                                  <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                  <a class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
                                 </div>
                               </div>
                             </div>
@@ -135,8 +137,8 @@
                             <div class="col-lg-4">
                                 <div class="card card mb-5 mb-lg-0">
                                     <div class="card-body">
-                                        <h5 class="card-title text-center">Premium</h5>
-                                        <h6 class="card-price text-center">$49</h6>
+                                        <h5 class="card-title">Premium</h5>
+                                        <h6 class="card-price">$49</h6>
                                         <hr>
                                         <ul class="fa-ul py-2">
                                             <li><span class="fa-li"><i class="fas fa-check"></i></span>Free workout plans</li>
@@ -146,7 +148,7 @@
                                             <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>24/7 Premium support</li>
                                             <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span>Hercules co-founder pack</li>
                                         </ul>
-                                        <a href="#" class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
+                                        <a class="btn btn-block btn-danger text-uppercase">Purchase now!</a>
                                     </div>
                                 </div>
                             </div>
