Added CC0 images and links

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
         <!-- Page header -->
         <div class="page-header clear-filter">
-            <div class="page-header-image" data-parallax="true" style="background-image: url('https://wallpaper-gallery.net/images/gym-wallpapers/gym-wallpapers-2.jpg');">
+            <!-- Use of image permitted by CC0 Creative Commons : https://wallpapersfit.com/gym-wallpaper.html/gym-wallpaper-hdq-cover-1wc2003812?lang=nl -->
+            <div class="page-header-image" data-parallax="true" style="background-image: url('/img/LandingBackground.jpg');">
             </div>
             <div class="container">
                 <div class="content-center brand">
