Corrected through w3c validator

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
     <meta name="viewport" content="width=device-width" />
     <title>Hercules - Become your own personal trainer</title>
     <!-- Fonts and icons -->
@@ -148,7 +148,7 @@
 
         <section class="section section-basic" id="mailchimp-section">
             <div class="container text-center">
-                <img class="n-logo mt-5" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png">
+                <img class="n-logo mt-5" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png" alt="">
                 <h1>Stay with us, we are launching soon...</h1>
                 <p>Hercules is working hard to launch the final release version of our app. Subscribe to us by clicked the subscribe button below and we'll notify you when we go online!</p>
                 <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
@@ -224,8 +224,8 @@
     </footer>
 
 
-</body>
-    <!--   Core JS Files   -->
+
+    <!-- Core JS Files -->
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/popper.min.js"></script>
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/bootstrap.min.js"></script>
@@ -239,4 +239,5 @@
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/now-ui-kit.js"></script>
     <!-- Personal script -->
     <script src="script.js"></script>
+</body>
 </html>
