--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport' />
-    <meta name="viewport" content="width=device-width" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hercules - Become your own personal trainer</title>
     <!-- Fonts and icons -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
@@ -20,6 +19,7 @@
 <body class="index-page sidebar-collapse">
 
     <header>
+        <!-- Navbar -->
         <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" color-on-scroll="400">
             <div class="container">
                 <div class="navbar-translate">
@@ -39,6 +39,7 @@
                 </div>
             </div>
         </nav>
+        <!-- End Navbar -->
 
         <!-- Page header -->
         <div class="page-header clear-filter page-header-image">
@@ -156,6 +157,7 @@
                 </form>
             </div>
         </section>
+
     </main>
 
     <footer class="footer wrapper" data-background-color="black">
@@ -223,8 +225,7 @@
         </div>
     </footer>
 
-
-
+    
     <!-- Core JS Files -->
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/jquery.min.js"></script>
     <script src="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/js/core/popper.min.js"></script>
