--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
     </main>
 
-    <footer class="footer wrapper" data-background-color="black">
+    <footer class="footer wrapper">
         <div class="container">
             <div class="row footer-subjects">
                 <div class="col-sm-12 col-md-2">
