--- a/index.html
+++ b/index.html
@@ -57,26 +57,54 @@
 
     <main class="main wrapper">
 
-        <section class="section section-basic">
-                <div class="container text-center mt-5">
-                    <h3 class="title">Some content here...</h3>
+        <section class="section section-basic" id="product-preview-section">
+                <div class="container text-center py-5">
+                    <h1 class="pb-3">Life will be so much easier</h1>
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl-3 col-md-6 col-sm-12">
+                                <div class="card mb-5 mb-lg-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
+                                        <h6 class="card-price py-3">For athletes</h6>
+                                        <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6 col-sm-12">
+                                <div class="card mb-5 mb-lg-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
+                                        <h6 class="card-price py-3">For bodybuilders</h6>
+                                        <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6 col-sm-12">
+                                <div class="card mb-5 mb-lg-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
+                                        <h6 class="card-price py-3">For athletes</h6>
+                                        <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xl-3 col-md-6 col-sm-12">
+                                <div class="card mb-5 mb-lg-0">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
+                                        <h6 class="card-price py-3">For bodybuilders</h6>
+                                        <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
         </section>
 
-        <section class="section section-basic">
-            <div class="container text-center mt-5">
-                <h3 class="title">Some more content here...</h3>
-            </div>
-        </section>
-
-        <section class="section section-basic">
-            <div class="container text-center mt-5">
-                <h3 class="title">Even more content here...</h3>
-            </div>
-        </section>
-
         <section class="section section-basic" id="pre-order-section">
-                <div class="container text-center mt-5">
+                <div class="container text-center">
                     <h1 class="py-5">Pre-order our product!</h1> 
                     <div class="pricing ">
                         <div class="container">
@@ -150,8 +178,8 @@
         <section class="section section-basic" id="mailchimp-section">
             <div class="container text-center">
                 <img class="n-logo mt-5" src="img/1j+ojVVCOMkX9Wyrexe4hGfR27TT6Usa2wiR1TN9Nmkd+AtrkScsh...Zq...Ot+dERBpAQGghEMcc4+iyxyWQ==.png" alt="">
-                <h1>Stay with us, we are launching soon...</h1>
-                <p>Hercules is working hard to launch the final release version of our app. Subscribe to us by clicked the subscribe button below and we'll notify you when we go online!</p>
+                <h1>Never miss a thing...</h1>
+                <p>We at Hercules work very hard to make sure you get the latest advancements on fitness and health. <br> Subscribe to us for our latest updates!</p>
                 <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
                         <input class="btn btn-danger btn-lg" type="submit" value="Subscribe">
                 </form>
