review carousel done

--- a/index.html
+++ b/index.html
@@ -60,40 +60,39 @@
         <section class="section section-basic" id="product-preview-section">
                 <div class="container text-center py-5">
                     <h1 class="pb-3">Life will be so much easier</h1>
-                    <div class="container">
-                        <div class="row">
+                    <div class="row">
                             <div class="col-xl-3 col-md-6 col-sm-12">
                                 <div class="card mb-5 mb-lg-0">
-                                    <div class="card-body">
+                                    <div class="card-body" id="card-1">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
-                                        <h6 class="card-price py-3">For athletes</h6>
+                                        <h6 class="card-price py-3">Athletes</h6>
                                         <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6 col-sm-12">
                                 <div class="card mb-5 mb-lg-0">
-                                    <div class="card-body">
+                                    <div class="card-body" id="card-2">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
-                                        <h6 class="card-price py-3">For bodybuilders</h6>
+                                        <h6 class="card-price py-3">Bodybuilders</h6>
                                         <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6 col-sm-12">
                                 <div class="card mb-5 mb-lg-0">
-                                    <div class="card-body">
+                                    <div class="card-body" id="card-3">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
-                                        <h6 class="card-price py-3">For athletes</h6>
+                                        <h6 class="card-price py-3">Athletes</h6>
                                         <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-xl-3 col-md-6 col-sm-12">
                                 <div class="card mb-5 mb-lg-0">
-                                    <div class="card-body">
+                                    <div class="card-body" id="card-4">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
-                                        <h6 class="card-price py-3">For bodybuilders</h6>
+                                        <h6 class="card-price py-3">Bodybuilders</h6>
                                         <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                                     </div>
                                 </div>
@@ -101,6 +100,43 @@
                         </div>
                     </div>
                 </div>
+        </section>
+
+        <section class="section section-basic" id="review-section">
+            <div class="container text-center">
+                <h1 class="py-5">Product reviews</h1>
+                <div class="row">
+                    <div class="col-xs-12 review-container">
+                        <div id="carouselExampleIndicators" class="carousel slide">
+                            <div class="carousel-inner" role="listbox">
+                                <div class="carousel-item active">
+                                    <!-- CC0 License : https://www.pexels.com/photo/adult-beard-boy-casual-220453/ -->
+                                    <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"/>
+                                    <h1 class="pt-5 mb-2 review-name">Paul Mithcel</h1>
+                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <p class="px-5 pb-5 review-text">The best fitness app out there, i'll never need another one!</p>
+                                </div>
+                                <div class="carousel-item">
+                                    <!-- CC0 License : https://www.pexels.com/photo/close-up-facial-expression-fashion-fine-looking-450214/ -->
+                                    <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/450214/pexels-photo-450214.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"/>
+                                    <h1 class="pt-5 mb-2 review-name">Paul Mithcel</h1>
+                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <p class="px-5 pb-5 review-text">I've been seriously using this app for 2 months and the results are insane.</p>
+                                </div>
+                                <div class="carousel-item">
+                                    <!-- CC0 License : https://www.pexels.com/photo/woman-in-black-scoop-neck-shirt-smiling-38554/ -->
+                                    <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/38554/girl-people-landscape-sun-38554.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"/>
+                                    <h1 class="pt-5 mb-2 review-name">Paul Mithcel</h1>
+                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <p class="px-5 pb-5 review-text">Love it! As somebody who does a lot of cooking, this app also provides alot of great healty recipes.</p>
+                                </div>
+                            </div>
+                            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev"><i class="now-ui-icons arrows-1_minimal-left"></i></a>
+                            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next"><i class="now-ui-icons arrows-1_minimal-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="section section-basic" id="pre-order-section">
