--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <section class="section section-basic" id="product-preview-section">
                 <div class="container text-center py-5">
                     <h1 class="pb-3">Life will be so much easier</h1>
-                    <div class="row">
-                            <div class="col-xl-3 col-md-6 col-sm-12">
+                    <div class="row product-review-container">
+                            <div class="col-xl-3 col-md-6 col-xs-12">
                                 <div class="card mb-5 mb-lg-0">
                                     <div class="card-body" id="card-1">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
@@ -70,7 +70,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="col-xl-3 col-md-6 col-xs-12">
                                 <div class="card mb-5 mb-lg-0">
                                     <div class="card-body" id="card-2">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
@@ -79,7 +79,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="col-xl-3 col-md-6 col-xs-12">
                                 <div class="card mb-5 mb-lg-0">
                                     <div class="card-body" id="card-3">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
@@ -88,7 +88,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-md-6 col-sm-12">
+                            <div class="col-xl-3 col-md-6 col-xs-12">
                                 <div class="card mb-5 mb-lg-0">
                                     <div class="card-body" id="card-4">
                                         <h5 class="card-title"><i class="fab fa-first-order fa-3x"></i></h5>
