--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
 
         <section class="section section-basic" id="review-section">
             <div class="container text-center">
+                <h1 class="pt-5">What our clients say.</h1>
+                <h5>You need more information? Check what others are saying about their purchase.</h5>
                 <div class="row py-5">
                     <div class="review-container py-5">
                         <div id="review-carousel" class="carousel slide">
