product preview section updates and click events added

--- a/partial_views/seniorPartial.html
+++ b/partial_views/seniorPartial.html
@@ -1,20 +1,20 @@
 <div class="container text-center">
-      <h1 class="pt-5">Seniors</h1>
-      <div class="row py-5">
+      <h1>Seniors</h1>
+      <div class="row">
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/209969/pexels-photo-209969.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/senior1.jpeg" alt="">
+                  <p class="partial-text">Adjusted gym plans</p>
             </div>
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/936094/pexels-photo-936094.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/senior2.jpeg" alt="">
+                  <p class="partial-text">Maintain mobility</p>
             </div>
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/931325/pexels-photo-931325.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/senior3.jpg" alt="">
+                  <p class="partial-text">Outdoor activities, no gym needed!</p>
             </div>
       </div>
-      <button id="returnButton" onclick="goBack()">
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
             Return
       </button>
 </div>
