--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent">
+<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
                   <a class="navbar-brand">Hercules</a>
