--- a/partial_views/selectinformationPartial.html
+++ b/partial_views/selectinformationPartial.html
@@ -1,4 +1,4 @@
-<div class="container text-center py-5">
+<div class="container text-center">
       <h1 class="pb-3">Life will be so much easier</h1>
       <div class="row product-review-container">
             <div class="col-xl-3 col-md-6">
