--- a/partial_views/therapyPartial.html
+++ b/partial_views/therapyPartial.html
@@ -1,20 +1,20 @@
 <div class="container text-center">
-      <h1 class="pt-5">Physical Therapy</h1>
-      <div class="row py-5">
+      <h1>Physical Therapy</h1>
+      <div class="row">
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/209969/pexels-photo-209969.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/therapy1.jpeg" alt="">
+                  <p class="partial-text">Deals at local message clinics!</p>
             </div>
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/936094/pexels-photo-936094.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/therapy2.jpeg" alt="">
+                  <p class="partial-text">Buddy system with person trainers!</p>
             </div>
             <div class="col-lg-4">
-                  <img src="https://images.pexels.com/photos/931325/pexels-photo-931325.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="">
-                  <p>Some information here</p>
+                  <img src="../src/img/therapy3.jpeg" alt="">
+                  <p class="partial-text">Get back on track in record time!</p>
             </div>
       </div>
-      <button id="returnButton" onclick="goBack()">
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
             Return
       </button>
 </div>
