fixed mistake with image path

--- a/partial_views/bodybuilderPartial.html
+++ b/partial_views/bodybuilderPartial.html
@@ -2,15 +2,15 @@
       <h1>Bodybuilders</h1>
       <div class="row">
             <div class="col-lg-4">
-                  <img src="../src/img/bodybuilder1.jpeg" alt="">
+                  <img src="./src/img/bodybuilder1.jpeg" alt="">
                   <p class="partial-text">Competition plans</p>
             </div>
             <div class="col-lg-4">
-                  <img src="../src/img/bodybuilder2.jpeg" alt="">
+                  <img src="./src/img/bodybuilder2.jpeg" alt="">
                   <p class="partial-text">Aesthetic plans</p>
             </div>
             <div class="col-lg-4">
-                  <img src="../src/img/bodybuilder3.jpeg" alt="">
+                  <img src="./src/img/bodybuilder3.jpeg" alt="">
                   <p class="partial-text">Enjoyable meal plans</p>
             </div>
       </div>
