--- a/partial_views/athletePartial.html
+++ b/partial_views/athletePartial.html
@@ -2,15 +2,15 @@
       <h1>Athletes</h1>
       <div class="row">
             <div class="col-lg-4">
-                  <img src="../src/img/Athlete1.jpeg" alt="">
+                  <img src="./src/img/Athlete1.jpeg" alt="">
                   <p class="partial-text">Best stretching practices!</p>
             </div>
             <div class="col-lg-4">
-                  <img src="../src/img/Athlete2.jpeg" alt="">
+                  <img src="./src/img/Athlete2.jpeg" alt="">
                   <p class="partial-text">Every movement perfected.</p>
             </div>
             <div class="col-lg-4">
-                  <img src="../src/img/Athlete3.jpeg" alt="">
+                  <img src="./src/img/Athlete3.jpeg" alt="">
                   <p class="partial-text">Programs for gynmastics!</p>
             </div>
       </div>
