cleaned up partial_views folder

--- a/partial_views/athletePartial.html
+++ b/partial_views/athletePartial.html
@@ -14,7 +14,5 @@
                   <p class="partial-text">Programs for gynmastics!</p>
             </div>
       </div>
-      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
-            Return
-      </button>
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">Return</button>
 </div>
