--- a/partial_views/selectinformationPartial.html
+++ b/partial_views/selectinformationPartial.html
@@ -6,8 +6,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Athletes</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's
-                                    enhanced using this app</p>
+                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                         </div>
                   </div>
             </div>
@@ -16,8 +15,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Bodybuilders</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's
-                                    enhanced using this app</p>
+                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                         </div>
                   </div>
             </div>
@@ -26,8 +24,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Seniors</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's
-                                    enhanced using this app</p>
+                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                         </div>
                   </div>
             </div>
@@ -36,8 +33,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Physical Therapy</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's
-                                    enhanced using this app</p>
+                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                         </div>
                   </div>
             </div>
