--- a/partial_views/bodybuilderPartial.html
+++ b/partial_views/bodybuilderPartial.html
@@ -14,7 +14,5 @@
                   <p class="partial-text">Enjoyable meal plans</p>
             </div>
       </div>
-      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
-            Return
-      </button>
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">Return</button>
 </div>
