--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -1,4 +1,3 @@
-<!-- Navbar -->
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
@@ -11,22 +10,14 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end">
                   <ul class="navbar-nav">
-                        <li class="nav-item">
-                              <a class="nav-link" href="">Section 1</a>
-                        </li>
-                        <li class="nav-item">
-                              <a class="nav-link" href="">Section 2</a>
-                        </li>
-                        <li class="nav-item">
-                              <a class="nav-link" href="">Section 3</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link" href="">Section 1</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Section 2</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Section 3</a></li>
                   </ul>
             </div>
       </div>
 </nav>
-<!-- End Navbar -->
 
-<!-- Page header -->
 <div class="page-header clear-filter page-header-image wrapper">
       <div class="container">
             <div class="content-center brand">
@@ -36,4 +27,3 @@
             </div>
       </div>
 </div>
-<!-- End Page header -->
