--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -6,7 +6,6 @@
                   <div id="review-carousel" class="carousel slide">
                         <div class="carousel-inner" role="listbox">
                               <div class="carousel-item active">
-                                    <!-- CC0 License : https://www.pexels.com/photo/adult-beard-boy-casual-220453/ -->
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
                                     <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
@@ -14,7 +13,6 @@
                                     <p class="px-5 pb-5 review-text">The best fitness app out there, i'll never need another one!</p>
                               </div>
                               <div class="carousel-item">
-                                    <!-- CC0 License : https://www.pexels.com/photo/close-up-facial-expression-fashion-fine-looking-450214/ -->
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/450214/pexels-photo-450214.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
                                     <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
@@ -22,21 +20,15 @@
                                     <p class="px-5 pb-5 review-text">I've been seriously using this app for 2 months and the results are insane.</p>
                               </div>
                               <div class="carousel-item">
-                                    <!-- CC0 License : https://www.pexels.com/photo/woman-in-black-scoop-neck-shirt-smiling-38554/ -->
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/38554/girl-people-landscape-sun-38554.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
                                     <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
                                     <h5 class="pb-5 review-rating">4/5</h5>
-                                    <p class="px-5 pb-5 review-text">Love it! As somebody who does a lot of cooking, this app also provides alot of great
-                                          healty recipes.</p>
+                                    <p class="px-5 pb-5 review-text">Love it! This app also provides alot of great healty recipes.</p>
                               </div>
                         </div>
-                        <a class="carousel-control-prev" href="#review-carousel" role="button" data-slide="prev">
-                              <i class="now-ui-icons arrows-1_minimal-left"></i>
-                        </a>
-                        <a class="carousel-control-next" href="#review-carousel" role="button" data-slide="next">
-                              <i class="now-ui-icons arrows-1_minimal-right"></i>
-                        </a>
+                        <a class="carousel-control-prev" href="#review-carousel" role="button" data-slide="prev"><i class="now-ui-icons arrows-1_minimal-left"></i></a>
+                        <a class="carousel-control-next" href="#review-carousel" role="button" data-slide="next"><i class="now-ui-icons arrows-1_minimal-right"></i></a>
                   </div>
             </div>
       </div>
