--- a/partial_views/seniorPartial.html
+++ b/partial_views/seniorPartial.html
@@ -14,7 +14,5 @@
                   <p class="partial-text">Outdoor activities, no gym needed!</p>
             </div>
       </div>
-      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
-            Return
-      </button>
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">Return</button>
 </div>
