--- a/partial_views/therapyPartial.html
+++ b/partial_views/therapyPartial.html
@@ -14,7 +14,5 @@
                   <p class="partial-text">Get back on track in record time!</p>
             </div>
       </div>
-      <button class="btn btn-lg" id="returnButton" onclick="goBack()">
-            Return
-      </button>
+      <button class="btn btn-lg" id="returnButton" onclick="goBack()">Return</button>
 </div>
