images made webfriendly

--- a/partial_views/therapyPartial.html
+++ b/partial_views/therapyPartial.html
@@ -2,15 +2,15 @@
       <h1>Physical Therapy</h1>
       <div class="row">
             <div class="col-lg-4">
-                  <img src="./src/img/therapy1.jpeg" alt="">
+                  <img src="./src/img/therapy1.jpg" alt="">
                   <p class="partial-text">Deals at local message clinics!</p>
             </div>
             <div class="col-lg-4">
-                  <img src="./src/img/therapy2.jpeg" alt="">
+                  <img src="./src/img/therapy2.jpg" alt="">
                   <p class="partial-text">Buddy system with person trainers!</p>
             </div>
             <div class="col-lg-4">
-                  <img src="./src/img/therapy3.jpeg" alt="">
+                  <img src="./src/img/therapy3.jpg" alt="">
                   <p class="partial-text">Get back on track in record time!</p>
             </div>
       </div>
