--- a/partial_views/seniorPartial.html
+++ b/partial_views/seniorPartial.html
@@ -2,11 +2,11 @@
       <h1>Seniors</h1>
       <div class="row">
             <div class="col-lg-4">
-                  <img src="./src/img/senior1.jpeg" alt="">
+                  <img src="./src/img/senior1.jpg" alt="">
                   <p class="partial-text">Adjusted gym plans</p>
             </div>
             <div class="col-lg-4">
-                  <img src="./src/img/senior2.jpeg" alt="">
+                  <img src="./src/img/senior2.jpg" alt="">
                   <p class="partial-text">Maintain mobility</p>
             </div>
             <div class="col-lg-4">
