Changed to scss, fixed scroll effect of navbar on mobile

--- a/partial_views/mailchimpPartial.html
+++ b/partial_views/mailchimpPartial.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-      <img class="n-logo mt-5" src="src/img/logo.png" alt="">
+      <img class="n-logo" src="src/img/logo.png" alt="">
       <h1>Never miss a thing...</h1>
       <p>We at Hercules work very hard to make sure you get the latest advancements on fitness and health.<br> Subscribe to us for our latest updates!</p>
       <form action="https://github.us19.list-manage.com/subscribe/post?u=634caec67bd36559b85fe5803&amp;id=64ce931aa8" method="post" target="_blank">
