--- a/partial_views/preorderPartial.html
+++ b/partial_views/preorderPartial.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<div class="container text-center pb-5">
       <h1 class="py-5">Pre-order our product!</h1>
       <div class="container pricing">
             <div class="row">
