--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -10,9 +10,12 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end">
                   <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="">Section 1</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Section 2</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Section 3</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Application</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Content</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Reviews</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Buy</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Subscribe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
                   </ul>
             </div>
       </div>
