--- a/partial_views/selectinformationPartial.html
+++ b/partial_views/selectinformationPartial.html
@@ -32,7 +32,7 @@
                   <div class="card mb-5 mb-xl-0" id="card4" onclick="loadInfo('therapy')">
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
-                              <h6 class="card-price py-3">Physical Therapy</h6>
+                              <h6 class="card-price py-3">Therapy</h6>
                               <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
                         </div>
                   </div>
