--- a/partial_views/headerPartial.html
+++ b/partial_views/headerPartial.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" id="navbar">
       <div class="container">
             <div class="navbar-translate">
-                  <a class="navbar-brand">Hercules</a>
+                  <a class="navbar-brand" onclick="scrollToElement('#header-section', 400);">Hercules</a>
                   <button class="navbar-toggler" type="button" data-toggle="collapse">
                         <span class="navbar-toggler-bar bar1"></span>
                         <span class="navbar-toggler-bar bar1"></span>
@@ -10,12 +10,12 @@
             </div>
             <div class="collapse navbar-collapse justify-content-end">
                   <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="">Application</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Content</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Reviews</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Buy</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Subscribe</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#app-section', 600);">Application</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#product-preview-section', 600);">Content</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#review-section', 600);">Reviews</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#pre-order-section', 600);">Buy</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#mailchimp-section', 600);">Subscribe</a></li>
+                        <li class="nav-item"><a class="nav-link" onclick="scrollToElement('#footer-section', 600);">Contact</a></li>
                   </ul>
             </div>
       </div>
