--- a/partial_views/reviewPartial.html
+++ b/partial_views/reviewPartial.html
@@ -9,21 +9,21 @@
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
                                     <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
-                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <h5 class="pb-5 review-rating">5/5</h5>
                                     <p class="px-5 pb-5 review-text">The best fitness app out there, i'll never need another one!</p>
                               </div>
                               <div class="carousel-item">
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/450214/pexels-photo-450214.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
-                                    <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
-                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <h2 class="pt-5 mb-2 review-name">Daly Lee-Walsh</h2>
+                                    <h5 class="pb-5 review-rating">4.5/5</h5>
                                     <p class="px-5 pb-5 review-text">I've been seriously using this app for 2 months and the results are insane.</p>
                               </div>
                               <div class="carousel-item">
                                     <img class="rounded-circle img-raised mt-4 review-image" src="https://images.pexels.com/photos/38554/girl-people-landscape-sun-38554.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260"
                                           alt="" />
-                                    <h2 class="pt-5 mb-2 review-name">Paul Mithcel</h2>
-                                    <h5 class="pb-5 review-rating">4/5</h5>
+                                    <h2 class="pt-5 mb-2 review-name">Natalie Kazantzis</h2>
+                                    <h5 class="pb-5 review-rating">5/5</h5>
                                     <p class="px-5 pb-5 review-text">Love it! This app also provides alot of great healty recipes.</p>
                               </div>
                         </div>
