--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="src/css/bootstrap.min.css" rel="stylesheet" >
     <link href="https://cdn.rawgit.com/creativetimofficial/now-ui-kit/2e8e665f/assets/css/now-ui-kit.min.css?v1.2.0" rel="stylesheet"/>
-    <link href="src/css/style.css" rel="stylesheet" >
+    <link href="src/css/style.min.css" rel="stylesheet" >
 </head>
 
 <body class="index-page sidebar-collapse">
