--- a/partial_views/selectinformationPartial.html
+++ b/partial_views/selectinformationPartial.html
@@ -1,12 +1,12 @@
 <div class="container text-center">
-      <h1 class="pb-3">Life will be so much easier</h1>
+      <h1 class="pb-3">Click one!</h1>
       <div class="row product-review-container">
             <div class="col-xl-3 col-md-6">
                   <div class="card mb-5 mb-xl-0" id="card1" onclick="loadInfo('athlete')">
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Athletes</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                              <p>Why athletes should try our app!</p>
                         </div>
                   </div>
             </div>
@@ -15,7 +15,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Bodybuilders</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                              <p>Why bodybuilders should try our app!</p>
                         </div>
                   </div>
             </div>
@@ -24,7 +24,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Seniors</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                              <p>Why seniors should try our app!</p>
                         </div>
                   </div>
             </div>
@@ -33,7 +33,7 @@
                         <div class="card-body">
                               <i class="fab fa-first-order fa-3x card-title"></i>
                               <h6 class="card-price py-3">Therapy</h6>
-                              <p>Some text here for athletes to show that we care about them and their performance and how it's enhanced using this app</p>
+                              <p>Why injured people should try our app!</p>
                         </div>
                   </div>
             </div>
